Fixed alignment and spacing of fields and buttons in multiple locations.

--- a/scss/trema/elements.scss
+++ b/scss/trema/elements.scss
@@ -131,7 +131,6 @@ body #page {
         font-size: 0.9rem;
         letter-spacing: 0.08rem;
         height: 2.75rem;
-        margin: 0.5rem;
         padding: 0 0.9rem;
         text-align: center;
         text-decoration: none;
